--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "cyclopts>=3.24.0",
     "dbt-core>=1.10.13",
     "dbt-databricks>=1.10.9",
+    "dotenv>=0.9.9",
     "hatchling>=1.27.0",
     "kaggle>=1.7.4.5",
     "omegaconf>=2.3.0",
@@ -18,6 +19,7 @@ dependencies = [
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
     "rich>=14.2.0",
+    "s3fs>=2025.9.0",
     "setuptools>=80.9.0",
 ]
 
