--- a/confs/extraction.yaml
+++ b/confs/extraction.yaml
@@ -1,5 +1,5 @@
 job:
   KIND: ExtractionJob
-  path: data/raw/transactions.parquet
+  path: s3://dbx-playground-bucket/raw/transactions.parquet
   dataset: kartik2112/fraud-detection
   unzip: True
