--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "hatchling>=1.27.0",
     "kaggle>=1.7.4.5",
+    "loguru>=0.7.3",
     "omegaconf>=2.3.0",
     "polars>=1.34.0",
     "pydantic>=2.12.3",
