--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,9 @@ readme = "README.md"
 authors = [
     { name = "chonalchendo", email = "110059232+chonalchendo@users.noreply.github.com" }
 ]
-requires-python = ">=3.13.0"
+requires-python = ">=3.12,<3.13"
 dependencies = [
     "cyclopts>=3.24.0",
-    "dbt-core>=1.10.13",
-    "dbt-databricks>=1.10.9",
-    "dotenv>=0.9.9",
     "hatchling>=1.27.0",
     "kaggle>=1.7.4.5",
     "loguru>=0.7.3",
@@ -20,7 +17,6 @@ dependencies = [
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
     "rich>=14.2.0",
-    "s3fs>=2025.9.0",
     "setuptools>=80.9.0",
 ]
 
@@ -37,7 +33,12 @@ commit = [
     "prek>=0.2.10",
 ]
 dev = [
+    "dbt-core>=1.10.13",
+    "dbt-databricks>=1.10.9",
+    "dotenv>=0.9.9",
+    "pyspark>=4.0.1",
     "rust-just>=1.43.0",
+    "s3fs>=2025.9.0",
 ]
 checks = [
     "ruff>=0.14.1",
@@ -59,7 +60,7 @@ update_changelog_on_bump = true
 fix = true
 indent-width = 4
 line-length = 88
-target-version = "py313"
+target-version = "py312"
 
 [tool.ruff.format]
 docstring-code-format = true
